# simpleboto

./: CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  requirements-pipe.txt  setup.cfg
.github/workflows/: build-and-publish-pypi.yml  build-distribution.yml  get-version.yml  publish-pypi.yml  push-pypi.yml  unit-test.yml  update-version.yml
simpleboto/: __init__.py  boto3_base.py
simpleboto/athena/: __init__.py  athena_client.py
simpleboto/athena/constants/: __init__.py  constants.py
simpleboto/athena/sql/: create_table.sql
simpleboto/athena/utils/: __init__.py  data_types.py  schema.py
simpleboto/exceptions/: __init__.py  custom_exceptions.py
simpleboto/logs/: __init__.py  logger.py
simpleboto/s3/: __init__.py  s3_client.py  s3_url.py
simpleboto/utils/: __init__.py  functions.py
tests/: base_test.py  test_athena_client.py  test_dtypes.py  test_exceptions.py  test_logger.py  test_s3_client.py  test_s3_url.py  test_schema.py  test_utils.py
tests/test_data/test_athena_client/create_table/: with_db_parquet.sql  without_db_csv.sql
tests/test_data/test_logger/: test_logs.txt
tests/test_data/test_utils/: test_get_file.txt
