[metadata]
name = simpleboto
url = https://github.com/ccollier97/simpleboto/
version = 0.3.2

author = Charlie Collier

description = A tool for easier use of boto3 methods
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = simpleboto
include_package_data = True
zip_safe = False
install_requires =
  setuptools>=60.0.0
  wheel>=0.37.0
  boto3
